--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "diggit_code_challenge",
-  "homepage": "http://amidav16.github.io/diggit-app",
+  "homepage": "http://amidav16.github.io/nextgen-app",
   "version": "1.0.0",
   "description": "",
-  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,13 +11,16 @@
     "watch:server": "nodemon src/server/server.js --watch src/server --watch public/bundle.js",
     "build": "webpack --mode production",
     "start": "node src/server/server.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "transpile": "babel src -d public --copy-files",
+    "prepublishOnly": "npm run transpile",
+    "deploy": "gh-pages -d public",
+    "publish-demo": "npm run build && npm run deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/polyfill": "^7.11.5",
     "@nivo/core": "^0.62.0",
@@ -26,7 +28,6 @@
     "@nivo/pie": "^0.62.0",
     "@storybook/addon-knobs": "^6.0.20",
     "axios": "^0.19.2",
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
@@ -52,9 +53,10 @@
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-react": "^7.7.4",
-    "@babel/register": "^7.9.0",
+    "@babel/register": "^7.11.5",
     "@babel/runtime": "^7.8.4",
     "@svgr/webpack": "^5.4.0",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-inline-react-svg": "^1.1.1",
     "babel-register": "^6.26.0",
